@@ -67,6 +67,9 @@ Trunk (unreleased changes)
 
     HDFS-511. Remove redundant block searches in BlockManager. (shv)
 
+    HDFS-504. Update the modification time of a file when the file 
+    is closed. (Chun Zhang via dhruba)
+
   BUG FIXES
     HDFS-76. Better error message to users when commands fail because of 
     lack of quota. Allow quota to be set even if the limit is lower than
